--- a/app/src/main/res/menu/menu_moi.xml
+++ b/app/src/main/res/menu/menu_moi.xml
@@ -9,7 +9,7 @@
     <item
         android:id="@+id/action_reset"
         android:title="Refresh"
-        android:icon="@drawable/refresh_grey"
+        android:icon="@drawable/reset_grey"
         app:showAsAction="always" />
 
     <item
